examples/invalid/test18.alice

The looking-glass hatta ()
opened
  1x was a number.
closed 
